[metadata]
name = comic_hasher
description = python tools to support comic-hasher
long_description = file: README.md
long_description_content_type = text/markdown
url = https://gitea.narnian.us/lordwelch/comic-hasher
author = Timmy Welch
author_email = timmy@narnian.us
license = MIT
license_files = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
py_modules = quick_tag
install_requires =
    comictagger==1.6.0a20
    imagehash
python_requires = >=3.9
package_dir =
    =cmd

[options.entry_points]
console_scripts = quick-tag=quick_tag:main

[pep8]
ignore = E265,E501
max_line_length = 120

[flake8]
extend-ignore = E501, A003
max_line_length = 120
per-file-ignores =
    *_test.py: LN001

[coverage:run]
plugins = covdefaults

[coverage:report]
fail_under = 95

[mypy]
check_untyped_defs = true
disallow_any_generics = true
warn_return_any = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[mypy-testing.*]
warn_return_any = false
disallow_untyped_defs = false

[mypy-tests.*]
warn_return_any = false
disallow_untyped_defs = false
